collects/tests/typed-scheme/fail/tc-error-format.rkt
#lang typed/racket
(ann '~s Nothing)
